--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -2,7 +2,7 @@
 
 include ../../makeopts
 
-SRC :=	AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
+CPP :=	AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
 	AdbDialogs.cpp ProvFC.cpp ProvBbdb.cpp ProvPalm.cpp \
 	AdbModule.cpp AdbImport.cpp AdbExport.cpp Collect.cpp
 
@@ -11,9 +11,12 @@ MOD :=	ImportText.cpp ImportXFMail.cpp ImportPine.cpp \
 	ExportPalm.cpp ExportText.cpp ExportVCard.cpp
 
 # FIXME: should be a specific value rather than wildcard
-ifneq (,$(filter %, $(DEBUG)))
-SRC += ProvDummy.cpp
+ifneq "$(filter %, $(DEBUG))" ""
+CPP +=	ProvDummy.cpp
 endif
+
+# SRC contains all the files that have translation strings
+SRC :=	$(CPP) $(MOD)
 
 # indirection to pick up definitions in makerules
 all:	binaries
@@ -21,7 +24,7 @@ all:	binaries
 include ../../makerules $(wildcard *.d)
 
 # MODOBJS and MODULES defined by makerules
-binaries: $(SRC:.cpp=.o) $(MODOBJS) $(MODULES)
+binaries: $(CPP:.cpp=.o) $(MODOBJS) $(MODULES)
 	@true
 
 clean:	stdclean
