--- a/src/wx/common/Makefile
+++ b/src/wx/common/Makefile
@@ -3,9 +3,8 @@
 
 include ../../../makeopts
 
-SRC = phone.cpp vcard.cpp 
-
-TARGETS = $(SRC:.cpp=.o)
+SRC	:= phone.cpp vcard.cpp 
+TARGETS := $(SRC:.cpp=.o)
 
 all:	$(TARGETS)
 	@true
