--- a/src/wx/vcard/Makefile
+++ b/src/wx/vcard/Makefile
@@ -3,20 +3,16 @@
 
 include ../../../makeopts
 
-TARGETS = libversit.a
+TARGETS := libversit.a
 
 CPPFLAGS += -I.src
 
 all:	$(TARGETS)
 	@true
 
-
 include ../../../makerules $(wildcard *.d)
 
-msgcat:
-	@echo nothing to be done
-
-libversit_a_OBJECTS = vcc.o vobject.o # vcaltmp.o
+libversit_a_OBJECTS := vcc.o vobject.o # vcaltmp.o
 
 libversit.a: $(libversit_a_OBJECTS)
 	$(RM) libversit.a
@@ -25,6 +21,5 @@ libversit.a: $(libversit_a_OBJECTS)
 
 clean: stdclean
 	rm -f vcc.c
-
 
 .PHONY: clean all
