--- a/makeopts.in
+++ b/makeopts.in
@@ -54,6 +54,8 @@ endif
 # canonical host
 CANONICAL_HOST := @host@
 
+# documentation
+PERL	:= @PERL@
 # DOC++/kdoc (doc++ is preferred, -r to do short filenames to avoid dpkg bug)
 DOCXXHTML=doc++ -r -f -k -u -k $(DXXTBL) -H -d $(BUILDDIR)/doc/classes
 DOCXXTEX =doc++ -f -k -u -k $(DXXTBL) -H -t -o $(BUILDDIR)/doc/classes.tex
@@ -67,10 +69,12 @@ LATEX	:= @LATEX@
 MAKEINDEX := @MAKEINDEX@
 DVIPS	:= @DVIPS@
 LATEX2HTML := @LATEX2HTML@
-XGETTEXT := @XGETTEXT@
-MSGFMT	:= @MSGFMT@
-PERL	:= @PERL@
 PSTOPDF	:= @PSTOPDF@
+# international localizations (i.e., translations)
+@MAKE_XLATE@
+XGETTEXT:= @XGETTEXT@
+MSGMERGE:= @MSGMERGE@
+MSGFMT	:= @MSGFMT@
 
 # compiler stuff
 CPP	:= @CPP@
