added 'reopen last open folders' option

--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -5,7 +5,7 @@ include ../../makeopts
 
 SRC :=	MObject.cpp MApplication.cpp PathFinder.cpp Profile.cpp \
 	XFace.cpp kbList.cpp MFolder.cpp MEvent.cpp MailCollector.cpp \
-	MModule.cpp MessageTemplate.cpp MFilter.cpp
+	MModule.cpp MessageTemplate.cpp MFilter.cpp FolderView.cpp
 
 TARGETS = $(SRC:.cpp=.o)
 
