Several unrelated changes.  Unfortunately, the changed files overlap so it would be hard to check them in individually. 1.  Changes to the list classes to make them closer to STL. 2.  Revamping some logic to avoid making copies of lists. 3.  Fixes to code that used stale cursors. 4.  Debugging builds now use local modules first, so you don't load a     production module into a debugging run. 5.  Revisions to the build system.  Vadim should like this... 6.  Removed LIBTOOL support.  We don't use it and it had bitrotted. 7.  Various cleanup, added checks for error conditions. 8.  I even turned some tabs into spaces, just to keep Vadim happy.

--- a/include/Makefile
+++ b/include/Makefile
@@ -31,9 +31,7 @@ $(IDLFILES) $(INTERFACES) $(CPPFILES): $(MID) $(M4DEF)
 
 msgcat:
 	@touch $(BUILDDIR)/messages.po
-	@set -e; cd .src; for i in *.h gui/*.h adb/*.h ; \
-	do $(XGETTEXT) -C -k_ -j -o $(BUILDDIR)/messages.po $$i ; \
-	done
+	cd .src; exec $(XGETTEXT) -C -k_ -j -o $(BUILDDIR)/messages.po *.h gui/*.h adb/*.h
 
 clean:
 	$(RM) $(IDLFILES) $(INTERFACES) $(CPPFILES)
