--- a/configure.in
+++ b/configure.in
@@ -58,6 +58,10 @@ M_OVERRIDES(wxdebug,wxWin debug libs,USE_WXDEBUG,0,
 
 M_OVERRIDES(wxconfigprg,wxWin config prog,USE_WXCONFIGPRG,,
 --with-wxconfigprg=xxx  use wx-config program named xxx e.g. wxgtkd-config)
+case "$USE_WXCONFIGPRG" in 1)
+	AC_MSG_WARN([you must specify a name for --with-wxconfigprg=xxx])
+	USE_WXCONFIGPRG='' ;;
+esac
 
 M_OVERRIDES(prof,profiling,USE_PROFILER,0,
 --with-prof           generate profiling code)
@@ -76,10 +80,6 @@ M_OVERRIDES(leaktracer,LeakTracer,USE_LEAKTRACER,0,
 
 M_OVERRIDES(efence,ElectricFence,USE_EFENCE,0,
 --with-efence           use ElectricFence for debugging)
-
-dnl no longer updated in makefiles
-dnl M_OVERRIDES(libtool,libtool,USE_LIBTOOL,0,
-dnl --with-libtool          use GNU libtool)
 
 M_OVERRIDES(ccostype,c-client OS type,USE_CCOSTYPE,,
 --with-ccostype=xxx     use OS type xxx for c-client compilation)
@@ -153,9 +153,16 @@ dnl fixups for UNIX variants
 AC_ISC_POSIX
 
 dnl does compiler support -c and -o simultaniously?
-dnl AC_PROG_CC_C_O
 dnl   defines NO_MINUS_C_MINUS_O if compiler does not accept 
 dnl                              both switches simultaniously
+AC_PROG_CC_C_O
+# I dislike delving so deeply into autoconf's internal values, but this
+# seems to be the only accurate way of finding out what it determined.
+case `eval echo '$'{ac_cv_prog_cc_${ac_cc}_c_o}` in yes) ;; *)
+	AC_MSG_ERROR([Sorry, this capability is used extensively by the build
+	system, including third-party code that we do not control.  You'll
+	have to use a compiler that supports this.]) ;;
+esac
 
 dnl disable support for exceptions if the compiler is gcc and
 dnl new enough to support it.
@@ -289,8 +296,8 @@ yes)	CXXFLAGS="$CXXFLAGS -MD" ;;
 	Dependencies are not supported for this compiler.  If this
 	message appears, then we need to talk---we think we know
 	how to fix this, but we don't have a machine where we can
-	test it.  Please go to http://mahogany.sourceforge.net/bugz and
-	submit a bug against the Build component so we can give
+	test it.  Please go to http://mahogany.sourceforge.net/bugz
+	and submit a bug against the Build component so we can give
 	you some code to try.]);;
 esac
 
@@ -309,16 +316,6 @@ AC_PROG_YACC
 AC_PROG_INSTALL
 
 AC_PROG_MAKE_SET
-
-dnl Are we using libtool?
-case "$USE_LIBTOOL" in
-1)	MAKE_LIBTOOL="USE_LIBTOOL=yes"
-	AM_PROG_LIBTOOL ;;
-*)	MAKE_LIBTOOL=
-	LIBTOOL=
-	AC_SUBST(LIBTOOL) ;;
-esac
-AC_SUBST(MAKE_LIBTOOL)
 
 dnl --------------------------------------------------------------------------
 dnl check for features and functions
@@ -412,13 +409,13 @@ case "$USE_WXDEBUG" in
 *)	WXCONFIG_NAME="wx-config" ;;
 esac
 case "$USE_WXCONFIGPRG" in
-'')	;;
+''|0)	;;
 *)	WXCONFIG_NAME="$USE_WXCONFIGPRG" ;;
 esac
 
 case "$USE_DEBUG_INFO.$GXX.$ac_cv_prog_cc_g" in
 1.yes.*)	MYFLAGS="$MYFLAGS -g3" 
-                USE_OPT=0 ;;
+		USE_OPT=0 ;;
 1.no.yes)	MYFLAGS="$MYFLAGS -g" ;;
 esac
 
@@ -440,7 +437,9 @@ esac
 
 MAKE_EXPERIMENTAL='EXPERIMENTAL :='
 case "$EXPERIMENTAL" in '') ;; *)
-	CPPFLAGS="$CPPFLAGS -DEXPERIMENTAL"
+	# including this on the command line interferes
+	# with its usage in wxMDialogs.cpp
+	#CPPFLAGS="$CPPFLAGS -DEXPERIMENTAL"
 	for i in $EXPERIMENTAL
 	do	CPPFLAGS="$CPPFLAGS -DEXPERIMENTAL_$i"
 		MAKE_EXPERIMENTAL="$MAKE_EXPERIMENTAL $i"
@@ -585,23 +584,19 @@ case "$USE_PYTHON" in 1)
    )
 esac
 
-AC_PATH_PROG(SWIG,swig)
-case "$SWIG" in
-'')	AC_MSG_WARN([cannot find SWIG - will try to use intermediate files
-	to compile Python support.  If possible, please install SWIG.])
-	MAKE_USE_SWIG= ;;
-*)	MAKE_USE_SWIG="USE_SWIG=yes" ;;
-esac
-AC_SUBST(MAKE_USE_SWIG)
-
 case "$USE_PYTHON" in
 1)	AC_DEFINE(USE_PYTHON)
 	MAKE_USE_PYTHON="USE_PYTHON=yes"
 	dnl extra libs required by python on freebsd
 	case "$OSTYPE" in freebsd* | FreeBSD*)
 		LIBS="-lreadline $LIBS" ;;
+	esac
+	AC_PATH_PROG(SWIG,swig)
+	case "$SWIG" in '')
+	    AC_MSG_WARN([cannot find SWIG - will try to use intermediate files
+	    to compile Python support.  If possible, please install SWIG.]) ;;
 	esac ;;
-*)	MAKE_USE_PYTHON=
+*)	MAKE_USE_PYTHON=''
 	AC_MSG_WARN(Building M without Python leads to reduced functionality!)
 	PYTHON_LIBS='' ;;
 esac
@@ -736,7 +731,7 @@ AC_CHECK_HEADER(pi-source.h,
  ),
  AC_MSG_WARN(Cannot find pisock headers - support for PalmOS disabled.)
 )
-AC_SUBST(MAKE_PISOCKLIB)    
+AC_SUBST(MAKE_PISOCKLIB)
 
 dnl Check if we have libmal source in extra/src
 MAKE_HAVE_LIBMAL=
@@ -851,7 +846,7 @@ LIBS="$LIBS $PYTHON_LIBS $LIB_EFENCE $LIB_DMALLOC $LIB_PAM"
 dnl Only now can we add them, or otherwise some tests would have failed
 case "$GCC" in yes)
 	case "$USE_STRICT" in
-	1)	CFLAGS="$CFLAGS -Werror -pedantic" ;;
+	1)	CFLAGS="$CFLAGS -Werror -pedantic -Wno-long-long" ;;
 	*)	CFLAGS="$CFLAGS -Wall" ;;
 	esac ;;	
 esac
@@ -859,8 +854,8 @@ dnl Python code produces warnings, so don't break compilation:
 CXXFLAGS_RELAXED="$CXXFLAGS"
 case "$GXX" in yes)
 	case "$USE_STRICT" in
-	1)	CXXFLAGS_RELAXED="$CXXFLAGS_RELAXED -Wall -pedantic"
-		CXXFLAGS="$CXXFLAGS -Werror -pedantic" ;;
+	1)	CXXFLAGS_RELAXED="$CXXFLAGS_RELAXED -Wall -pedantic -Wno-long-long"
+		CXXFLAGS="$CXXFLAGS -Werror -pedantic -Wno-long-long" ;;
 	*)	CXXFLAGS_RELAXED="$CXXFLAGS_RELAXED -Wall"
 		CXXFLAGS="$CXXFLAGS -Wall" ;;
 	esac ;;	
