1. completely rewrote MailFolderCC update logic:  a) no more events queuing in MailFolderCC itself, only GUI events are queued  b) no more invalid listings  c) extracted more code from MailFolderCC.cpp into separate files
2. introduced SendMessage abstract base class for SendMessageCC to further
   reduce header dependencies

3. tried to fix the bug with folder colour (not) changing

4. fixed bug with deleted message still shown in the viewer

--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -5,7 +5,7 @@ include ../../makeopts
 
 # Need SRC for translation processing
 SRC	:= $(patsubst .src/%,%,$(wildcard .src/*.cpp))
-TARGETS	:= strutil.o sysutil.o upgrade.o miscutil.o twofish2.o
+TARGETS	:= strutil.o sysutil.o upgrade.o miscutil.o twofish2.o ssl.o
 
 ifdef USE_LEAKTRACER
 TARGETS	+= LeakTracer.o
