SendMessageCC.i doesn't work, removed

--- a/src/Python/makefile
+++ b/src/Python/makefile
@@ -7,6 +7,7 @@ SWIG=swig
 SWIGFLAGS := -c++ -python -shadow
 
 IFACES := $(wildcard *.i)
+IFACES := $(filter-out SendMessageCC.i, $(IFACES))
 OBJS := $(IFACES:.i=.o)
 
 %.cpp %.py: %.i
