--- a/makeopts.in
+++ b/makeopts.in
@@ -117,5 +117,5 @@ LDFLAGS = @LDFLAGS@
 
 LIBS=$(MODULES_LIBS) @LIBS@ 
 LIBS_STATIC=$(MODULES_LIBS) @LIBS_STATIC@ 
-GUI_LIBS=@GTK_LDFLAGS@
+GUI_LIBS=@WX_LDFLAGS@
 GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
