--- a/src/Python/.cvsignore
+++ b/src/Python/.cvsignore
@@ -1,4 +1,4 @@
-.depend
+*.pyc
 MAppBase_swig.cpp
 MAppBase_wrap.doc
 MAppBase_wrap.html
@@ -22,4 +22,3 @@ Profile_wrap.doc
 Profile_wrap.html
 String_swig.cpp
 String_wrap.doc
-junk
