--- a/src/Python/.cvsignore
+++ b/src/Python/.cvsignore
@@ -1,24 +1,17 @@
 *.pyc
-MAppBase_swig.cpp
-MAppBase_wrap.doc
-MAppBase_wrap.html
-MObject.cpp
+MAppBase.py
 MObject.py
-MObject_swig.cpp
-MObject_wrap.doc
-MObject_wrap.html
+MailFolder.py
+Message.py
 MProfile.py
 MString.py
-MString_wrap.html
-MString_wrap.doc
+MTest.py
+swiglib.py
+MAppBase_swig.cpp
+MObject_swig.cpp
 MailFolder_swig.cpp
-MailFolder_wrap.doc
-MailFolder_wrap.html
 Message_swig.cpp
-Message_wrap.doc
-Message_wrap.html
-Profile_swig.cpp
-Profile_wrap.doc
-Profile_wrap.html
-String_swig.cpp
-String_wrap.doc
+MProfile_swig.cpp
+MString_swig.cpp
+MTest_swig.cpp
+swiglib_swig.cpp
