--- a/doc/HtmlHlp/Makefile
+++ b/doc/HtmlHlp/Makefile
@@ -11,8 +11,8 @@ htmlhlp: .src/Manual.hhc
 # latex2html options are needed to produce a single HTML file without
 # any navigation buttons which we don't need in CHM files anyhow
 .src/Manual.html: .src/Manual.tex
-	$(LATEX2HTML) -split 0 -info 0 -verbosity 0 -no_navigation $<
-	mv .src/Manual/Manual.html .src && rm -rf .src/Manual
+	$(LATEX2HTML) -local_icons -split 0 -info 0 -verbosity 0 -no_navigation -dir Manual $<
+	mv Manual/Manual.html .src && rm -rf Manual
 
 .src/Manual.hhc: .src/Manual.html
 	cd .src && $(PERL) -w makehhc.pl
