--- a/doc/HtmlHlp/Makefile
+++ b/doc/HtmlHlp/Makefile
@@ -12,9 +12,12 @@ htmlhlp: .src/Manual.hhc
 # any navigation buttons which we don't need in CHM files anyhow
 .src/Manual.html: .src/Manual.tex
 	$(LATEX2HTML) -local_icons -split 0 -info 0 -verbosity 0 -no_navigation -dir Manual $<
-	mv Manual/Manual.html .src && rm -rf Manual
+	mv Manual/Manual.html .src
 
 .src/Manual.hhc: .src/Manual.html
 	cd .src && $(PERL) -w makehhc.pl
 
-.PHONY: htmlhlp
+clean:
+	rm -rf Manual .src/Manual.tex .src/Manual.html
+
+.PHONY: htmlhlp clean
