1. don't propose to get all folders from IMAP server in the install wizard    as it doesn't work anyhow (too early, it just hangs) 2. but do propose it now when opening an IMAP server for the first time 3. changed default sort order to "Date" 4. and default wrap width to 80 5. handle TABs and "\r\r\n"s in the msg viewer better 6. remember maximized status of the frames too 7. changed some wxYield() -> wxYieldIfNeeded() 8. changed some BMPs into ICOs so that M now finds them

--- a/res/M.rc
+++ b/res/M.rc
@@ -41,14 +41,16 @@ MainFrameNewMail ICON	"frame_new.ico"
 Adbedit 	ICON	"adbedit.ico"
 
 // MIME icons (32x32)
-application	BITMAP	"application.bmp"
-audio		BITMAP	"audio.bmp"
-binary		BITMAP	"binary.bmp"
-dvi		BITMAP	"dvi.bmp"
-image		BITMAP	"image.bmp"
-postscript	BITMAP	"postscript.bmp"
-txt		BITMAP	"txt.bmp"
-video		BITMAP	"video.bmp"
+application	ICON	"application.ico"
+audio		ICON	"audio.ico"
+binary		ICON	"binary.ico"
+dvi		ICON	"dvi.ico"
+image		ICON	"image.ico"
+postscript	ICON	"postscript.ico"
+text		ICON	"text.ico"
+video		ICON	"video.ico"
+
+// misc
 hlink		ICON	"hlink.ico"
 ftplink		ICON	"ftplink.ico"
 
