--- a/res/M.rc
+++ b/res/M.rc
@@ -112,6 +112,7 @@ adrbook		BITMAP "adrbook.bmp"
 helpers		BITMAP "helpers.bmp"
 msgview		BITMAP "msgview.bmp"
 folderview	BITMAP "folderview.bmp"
+sync		BITMAP "sync.bmp"
 miscopt		BITMAP "miscopt.bmp"
 access		BITMAP "access.bmp"
 
